--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "server.js",
     "author": "Joseph Frank",
     "dependencies": {
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "mysql": "^2.16.0"
     }
 }
