--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "bcrypt": "^3.0.4",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
+        "joi": "^14.3.1",
         "mysql": "^2.16.0"
     }
 }
