--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "bcrypt": "^3.0.4",
         "express": "^4.16.4",
         "joi": "^14.3.1",
+        "jsonwebtoken": "^8.5.0",
         "mysql": "^2.16.0"
     }
 }
