--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "joi": "^14.3.1",
         "jsonwebtoken": "^8.5.0",
         "mysql": "^2.16.0",
-        "shortid": "^2.2.14"
+        "shortid": "^2.2.14",
+        "twilio": "^3.30.2"
     }
 }
